# o-nakala-core

./: .env.example  .gitignore  API_VALIDATION_ANALYSIS.md  BEFORE_AFTER_CURATION_REPORT.md  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  CONSOLIDATION_PLAN.md  DEVELOPMENT_ENVIRONMENT.md  DJANGO_WEB_APP_PROMPT.md  FULL_CYCLE_CURATION_REPORT.md  LICENSE  MAINTENANCE.md  MYPY_ANALYSIS_SUMMARY.md  NAKALA_API_SPECIFICATIONS.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  PYPI_PUBLICATION_GUIDE.md  QUICK_START.md  README.md  RELEASE.md  RELEASE_NOTES_v2.3.0.md  RELEASE_v2.4.3.md  RELEASE_v2.4.4.md  RELEASE_v2.4.5.md  REPOSITORY_PUBLIC_READINESS.md  SECURITY_FIXES_SUMMARY.md  SECURITY_TESTING_GUIDELINES.md  START_HERE.md  TEST_FIXES_SUMMARY.md  VALIDATION_IMPLEMENTATION_SUMMARY.md  WORKFLOW_CAPABILITY_PROOF.md  WORKFLOW_VALIDATION_README.md  WORKSHOP_TESTED_COMMANDS.md  api_validation_test.py  cleanup.py  collection_workflow_analysis.md  collections_output.csv  coverage.json  demo_curator_simple.py  (+46 more)
.github/workflows/: ci.yml  documentation-quality.yml  python-compatibility.yml
api/: api_keys.md  guide_description.md  nakala-apitest.json  nakala_metadata_vocabulary.json
config/: .env.template
docs/: API_REFERENCE.md  COMPLETE_METADATA_SYSTEM_DESIGN.md  CONSOLIDATION_PLAN.md  CSV_FORMAT_GUIDE.md  DEVELOPMENT.md  DEVELOPMENT_ENVIRONMENT.md  DOCUMENTATION_VALIDATION_STRATEGY.md  ENDPOINT_IMPLEMENTATION_STATUS.md  GETTING_STARTED.md  METADATA_CAPABILITIES_SUMMARY.md  README.md  _navigation.md  curator-field-reference.md  development_timeline.md  enhanced_nakala_dev_plan.md  nakala_api_hybrid_usage.md  nakala_dev_plan.md  note.md  property-uri-mapping.md  troubleshooting.md  v2_development_complete.md
docs/analysis/: 01-api-client-analysis.md  03-collection-workflow-analysis.md  feedback_comparison.md  openapi_consistency.md
docs/development/: CSV_TRANSFORMATION_ANALYSIS.md  ENDPOINT_FIELD_IMPROVEMENT_PLAN.md
docs/endpoints/: README.md
docs/examples/: README.md  custom-field-mapping.py  institutional-workflow.py
docs/guides/: README.md  csv-field-testing.md  extending-preview-tool.md  feature-showcase.md  getting-started.md  quick-reference.md  researcher-workflow-guide.md
docs/implementation/: 01-api-implementation-notes.md  02-architecture-overview.md  02-implementation-review.md  04-documentation-assessment.md
docs/user-guides/: 01-upload-guide.md  02-collection-guide.md  03-workflow-guide.md  04-curation-guide.md  04-v2-migration-guide.md  05-faq.md  05-troubleshooting.md  06-curation-guide.md  06-ml-enhanced-curation.md  README.md  troubleshooting.md
docs_organized/: README.md
docs_organized/reference/: api_keys.md
examples/: README.md  basic_usage.py  batch_modification_summary.md  commit_improvements_guide.md  critical_fixes_summary.md  curator_example.py  enhanced_batch_modification_analysis.md  field_mapping_analysis.md  requirements.txt  setup.bat  setup.sh
examples/notebooks/: README.md  cleanup_all_unakala1_data.py  cleanup_all_unakala1_data.sh  collections_output.csv  collections_output.csv.backup_20250625_120104  requirements.txt  run_ultimate_workflow.sh  run_workflow.sh  ultimate_workflow_notebook.ipynb  v2_5_0_workflow_demo.py  v2_5_1_workflow_demo.py  workflow_notebook.ipynb  workshop_demo.ipynb
examples/sample_dataset/: AUTOMATION_SCRIPTS.md  README.md  WORKSHOP_CSV_GUIDE.md  cleanup_all_unakala1_data.sh  cleanup_test_data.py  collections_output.csv  comprehensive_curation_analysis.json  create_collection_modifications.py  create_modifications.py  creator_fixes_collections.csv  creator_fixes_datasets.csv  curator_cli_test.json  quality_report.json  quality_report_real.json  run_complete_workflow.sh  run_ultimate_workflow.ipynb  run_ultimate_workflow.sh  run_workflow_with_cleanup.sh  upload_results.csv  upload_results.csv.backup_20250623_191103  upload_results_real.csv  verify_cleanup.py  workflow_complete_summary.json
examples/simple-dataset/: command.md
examples/templates/: README.md  basic_upload_template.csv  collection_template.csv
examples/workflow_documentation/: CREATOR_FIELD_ANALYSIS.md  CREATOR_FIELD_ANALYSIS_RESOLVED.md  HTTP_CREATOR_TEST_RESULTS.md  PROVEN_COMMANDS.md  README.md  TROUBLESHOOTING.md  UPDATED_CSV_FORMATS.md  WORKFLOW_INDEX.md  batch-processing.md  best-practices.md  case-study-archive.md  case-study-collaboration.md  case-study-dh.md  current_collection_metadata.json  error-recovery.md  institutional-setup.md  metadata-standards.md  quality-assurance.md  test_creator_payload.json  updated_collection_response.json  workflow-process.md
nakala-python-client/: pyproject.toml  setup.py
nakala-python-client/.openapi-generator/: FILES
nakala-python-client/docs/: Collection2.md  CollectionsIdentifierDatasGet200Response.md  Data5.md  File3.md  File4.md  Meta5.md  Relation3.md  Relation4.md  Task.md  TaskStep.md  User5.md  UserCollectionsQuery.md  UserDatasQuery.md
nakala-python-client/openapi_client/: api_client.py  configuration.py
nakala-python-client/test/: test_abstract_group.py  test_author.py  test_collection.py  test_collection2.py  test_collection3.py  test_collection4.py  test_collection5.py  test_collections_api.py  test_data.py  test_data2.py  (+61 more)
nakala_connector/: __init__.py  api.py  client.py  exceptions.py
o-nakala-workshop/: DEBUG_PATHS.md  LOCAL_TESTING_GUIDE.md  NAKALA_Complete_Workflow.ipynb  README.md  debug_cell.py  requirements.txt  test_local_setup.py
sample_dataset/: folder_collections.csv  folder_data_items.csv
scripts/: check-docs.sh  maintain-docs.py
simple-dataset/: command.md  dataset.csv
test_workflow_output/: complete_workflow_results.json  comprehensive_test_cases.json  curated_collections.csv  curated_data_items.csv  large_dataset_simulation.csv  malformed_test.csv  modification_template.csv
tests/: __init__.py  conftest.py
tools/: README.md  collection_validator.py  curator_validator.py  upload_validator.py
web/: README.md  app.js  index.html  manifest.json  mobile-guide.md  styles.css  sw.js  template-designer.css  template-designer.html  template-designer.js
(+306 files in other folders)
