[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nakala-connector"
version = "0.1.0"
description = "A Python client for the Nakala API"
readme = "README.md"
authors = [
    {name = "EFEO", email = "contact@efeo.fr"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing"
]
keywords = ["nakala", "api", "digital-humanities", "efeo"]
dependencies = [
    "requests>=2.28.0",
    "pydantic>=1.10.0,<3.0.0",
    "python-dateutil>=2.8.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=0.991",
    "types-requests>=2.28.0",
    "types-python-dateutil>=2.8.0"
]

docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.19.0"
]

[project.urls]
Homepage = "https://github.com/EFEO/nakala-connector"
Documentation = "https://nakala-connector.readthedocs.io/"
Repository = "https://github.com/EFEO/nakala-connector"
Issues = "https://github.com/EFEO/nakala-connector/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["nakala_connector*"]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["pydantic.*"]
ignore_missing_imports = true
