[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "o-nakala-core"
version = "2.0.0"
authors = [
    {name = "xy-liao"},
]
description = "A comprehensive Python client for the Nakala research data repository API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Database",
    "Topic :: Text Processing",
]
keywords = ["nakala", "research-data", "repository", "api-client", "digital-humanities"]

dependencies = [
    "requests>=2.32.3",
    "tenacity>=9.1.2",
    "typing-extensions>=4.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0", 
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]
cli = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]
all = [
    "o-nakala-core[dev,cli]"
]

[project.urls]
Homepage = "https://github.com/xy-liao/o-nakala-core"
Repository = "https://github.com/xy-liao/o-nakala-core"
Documentation = "https://nakala.fr/documentation"
"Bug Tracker" = "https://github.com/xy-liao/o-nakala-core/issues"

[project.scripts]
nakala-upload = "nakala_client.cli.upload:main"
nakala-collection = "nakala_client.cli.collection:main"
nakala-curator = "nakala_client.cli.curator:main"
nakala-user-info = "nakala_client.cli.user_info:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]